# vup

./: .gitignore  CONTRIBUTING.md  DEV.md  LICENSE  Makefile  PATCHES.md  README.md  packaging.md
.github/: dependabot.yml  labeler.yml  pull_request_template.md
docker/: Dockerfile
keys/: 78:b8:1b:87:74:ff:ce:49:f8:f9:06:9a:04:7f:7e:1e.plist  (+1 more)
vuru/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
vuru/src/: cache.c  cache.h  cache.rs  cli.rs  index.c  index.h  index.rs  main.c  main.odin  main.rs  resolver.odin  template.odin  utils.c  utils.h  xbps.h  xbps.rs  xbps_src.odin
vuru/src/commands/: build.odin  clone.odin  config_utils.odin  fetch.odin  info.odin  install.odin  query.odin  remove.odin  search.odin  src_cmd.odin  sync.odin  types.odin  update.odin
vuru/src/common/: index.odin  utils.odin
vuru/src/core/builder/: builder.odin  xbps_src.odin
vuru/src/core/config/: config.odin
vuru/src/core/errors/: errors.odin  format.odin
vuru/src/core/index/: index.odin  types.odin
vuru/src/core/resolve/: resolver.odin  types.odin
vuru/src/core/template/: cache.odin  fetch.odin  template.odin
vuru/src/core/transaction/: transaction.odin  types.odin
vuru/src/core/xbps/: common.odin  install.odin  query.odin  remove.odin  upgrade.odin  version.odin
vuru/src/utils/: diff.odin  utils.odin
vuru/src/xbps/: common.h  diff.c  diff.h  diff.rs  install.c  install.h  install.odin  install.rs  mod.rs  search.c  search.h  search.odin  search.rs  uninstall.c  uninstall.h  uninstall.odin  uninstall.rs  upgrade.c  upgrade.h  upgrade.odin  upgrade.rs
(+100 files in other folders)
