[package]
name = "vuru"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
clap = { version = "4.5.54", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
] }
clap_complete = "4.5.1"
dirs = "6.0.0"
reqwest = { version = "0.13.1", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = [
    "std",
] }
